# bfowru

./: .gitignore  manage.py  pyproject.toml  release.config.cjs  requirements.txt  vercel.json  wrangler.jsonc
.github/workflows/: release.yml
docs/: USER_GUIDE.md
frontend/: vite.config.js
frontend/src/: App.jsx  api.js  index.css  scheduleConfig.js
frontend/src/components/: AppChrome.jsx  AppStateViews.jsx  (+5 more)
scheduler/: admin.py  api.py  api_bootstrap.py  api_feedback.py  api_serializers.py  api_slots.py  api_stats.py  apps.py  forms.py  game_updates.py  models.py  overfast.py  overfast_live.py  overfast_metrics.py  overfast_serializers.py  roster.py  test_feedback.py  test_overfast.py  test_schedule.py  tests.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_seed_players.py  0003_remove_scheduleslot_slot_start_between_0000_and_2300_and_more.py  0004_remove_scheduleslot_slot_valid_by_type_and_more.py  0009_alter_dayeventtype_event_type.py  0010_player_avatar_link.py  0011_player_avatar_content_type_player_avatar_data.py  0012_staffmember_alter_player_options_player_role_color_and_more.py  0017_gameupdate.py  0020_scheduleslot_week_start.py  0022_limit_scheduleslot_note_length.py  0023_feedbackentry.py  0024_alter_feedbackentry_status.py
static/css/: styles.css
static/frontend/: app.css  app.js
static/js/: clocks.js  slot_form.js
team_schedule/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/registration/: login.html
templates/scheduler/: app.html  schedule.html  slot_confirm_delete.html  slot_form.html
(+73 files in other folders)
