[project]
name = "web-scheduler-blackflock"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4==4.13.4",
    "Django==5.2.13",
    "dj-database-url==2.2.0",
    "psycopg2-binary==2.9.10",
    "requests==2.32.3",
]

[tool.vercel.scripts]
build = "python manage.py migrate"
